--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>KKPhim</title>
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q50DDCE6ZB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-Q50DDCE6ZB');
+</script>
 
 <body>
   <div id="root"></div>
